[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/styles/background.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/styles/button_red.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/styles/button_green.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/sprites/cards/FreeCard.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/cards/Back.png" type="Texture" id=5]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/Circle.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/button_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/styles/background2.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/fonts/playerlist_font.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/card/Card.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Animation" id=5]
resource_name = "Pause_Transition"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("Pause:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Pause:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Pause:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Pause:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Pause:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Pause:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Pause:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Pause:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Game" type="Node"]
script = ExtResource( 6 )
cardScene = ExtResource( 11 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 9 )

[node name="PauseButton" type="Button" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -130.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 130.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="PauseBarBox" type="HBoxContainer" parent="Background/PauseButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 14
alignment = 1

[node name="RightBar" type="Panel" parent="Background/PauseButton/PauseBarBox"]
margin_right = 23.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )

[node name="LeftBar" type="Panel" parent="Background/PauseButton/PauseBarBox"]
margin_left = 37.0
margin_right = 60.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="PlayArea" type="Panel" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -416.0
margin_right = 210.0
margin_bottom = -200.0
custom_styles/panel = SubResource( 1 )

[node name="DrawPileBox" type="HBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -90.5
margin_right = 179.0
margin_bottom = 10.5

[node name="DiscardPile" type="TextureButton" parent="Background/DrawPileBox"]
margin_right = 176.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="DrawPile" type="TextureButton" parent="Background/DrawPileBox"]
margin_left = 180.0
margin_right = 357.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="HandBox" type="HBoxContainer" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -13.0
margin_top = -184.0
margin_right = 9.0
margin_bottom = 16.0
rect_clip_content = true
alignment = 1

[node name="Pause" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 1 )

[node name="BottomBar" type="HBoxContainer" parent="Pause"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -105.0
margin_right = -30.0
margin_bottom = -30.0
custom_constants/separation = 30

[node name="Leave" type="Button" parent="Pause/BottomBar"]
margin_right = 195.0
margin_bottom = 75.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Leave"

[node name="Resume" type="Button" parent="Pause/BottomBar"]
margin_left = 225.0
margin_right = 420.0
margin_bottom = 75.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Resume"

[node name="Panel" type="Panel" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 92.0
margin_top = 30.0
margin_right = -93.0
margin_bottom = -135.0
custom_styles/panel = SubResource( 4 )

[node name="LobbyID" type="Label" parent="Pause/Panel"]
anchor_right = 1.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = ExtResource( 3 )
text = "ID: 123456"
align = 1
valign = 1

[node name="PlayerList" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 125.0
margin_right = 148.0
margin_bottom = 729.0
rect_min_size = Vector2( 295, 0 )
custom_constants/separation = 30

[node name="Player1" type="Label" parent="Pause/PlayerList"]
margin_right = 295.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 10 )
custom_styles/normal = ExtResource( 2 )
text = "Player 
1 "
align = 2

[node name="PlayerIcon" type="Sprite" parent="Pause/PlayerList/Player1"]
position = Vector2( 70, 48 )
scale = Vector2( 0.355556, 0.262598 )
texture = ExtResource( 7 )

[node name="Player2" type="Label" parent="Pause/PlayerList"]
margin_top = 130.0
margin_right = 295.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 10 )
custom_styles/normal = ExtResource( 3 )
text = "Player 2 "
align = 2

[node name="PlayerIcon" type="Sprite" parent="Pause/PlayerList/Player2"]
position = Vector2( 70, 48 )
scale = Vector2( 0.355556, 0.262598 )
texture = ExtResource( 7 )

[node name="Player3" type="Label" parent="Pause/PlayerList"]
margin_top = 260.0
margin_right = 295.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 10 )
custom_styles/normal = ExtResource( 3 )
text = "Adjective 
Noun "
align = 2

[node name="PlayerIcon" type="Sprite" parent="Pause/PlayerList/Player3"]
position = Vector2( 70, 48 )
scale = Vector2( 0.355556, 0.262598 )
texture = ExtResource( 7 )

[node name="Player4" type="Label" parent="Pause/PlayerList"]
margin_top = 390.0
margin_right = 295.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 10 )
custom_styles/normal = ExtResource( 3 )
text = "Player 4 "
align = 2

[node name="PlayerIcon" type="Sprite" parent="Pause/PlayerList/Player4"]
position = Vector2( 70, 48 )
scale = Vector2( 0.355556, 0.262598 )
texture = ExtResource( 7 )

[node name="KickPlayer" type="Button" parent="Pause/PlayerList"]
margin_top = 520.0
margin_right = 295.0
margin_bottom = 604.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Kick Player"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pause_Transition = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="pressed" from="Background/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Pause/BottomBar/Leave" to="." method="_on_Leave_pressed"]
[connection signal="pressed" from="Pause/BottomBar/Resume" to="." method="_on_Resume_pressed"]
